base/utilities/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: utilities
  labels:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/part-of: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stirling-pdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stirling-pdf
        app.kubernetes.io/part-of: homelab
    spec:
      containers:
        - name: stirling-pdf
          image: frooodle/s-pdf:latest@sha256:b5b9e400c086e5334a4947a0d7cd589808f743f29267d7f41c18200cf4bc48b4
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1536Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 3
