base/utilities/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: utilities
  labels:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stirling-pdf
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
